[package]
name = "consolidate_experiments"
version = "0.1.0"
authors = ["Matteo De Carlo <matteo.dek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
regex = "1.3"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
threadpool = "1.8.1"
num_cpus = "1.13.1"